[test] introduced validation after JSON deserialization